--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "babel-cli": "^6.23.0",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-es2015": "^6.22.0",
+        "babel-preset-stage-0": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
         "babelify": "^7.3.0",
         "browserify": "^14.1.0",
@@ -90,6 +91,7 @@
         "jsdoc": "^3.4.3",
         "mkdirp": "^0.5.1",
         "nyc": "^10.1.2",
+        "one-listener": "^0.5.1",
         "pify": "^2.3.0",
         "postcss-cssnext": "^2.11.0",
         "pug": "^2.0.0-rc.1",
