--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "cross-env": "^5.0.0",
         "css-modulesify": "^0.28.0",
         "cz-conventional-changelog": "^2.0.0",
+        "easing-utils": "^0.0.7",
         "enquirer": "^0.4.1",
         "errorify": "^0.3.1",
         "express": "^4.15.3",
