build(dist): allow building a dist version

--- a/package.json
+++ b/package.json
@@ -37,18 +37,19 @@
         "babel": "cross-env BABEL_ENV=production && babel src --out-dir lib --copy-files",
         "build": "cross-env NODE_ENV=production babel-node ./scripts/build",
         "coveralls": "nyc report --reporter=text-lcov | coveralls",
-        "report": "nyc report --reporter=html",
+        "dev": "babel-node ./scripts/dev",
+        "dist": "cross-env NODE_ENV=production babel-node ./scripts/dist",
         "docs": "babel-node ./scripts/jsdoc && jsdoc -c jsdoc.json",
-        "lint": "npm run eslint; npm run stylelint",
-        "stylelint": "stylelint {demo,src}/**/*.{css,less,scss}",
         "eslint": "xo '{demo,src}/**/*.js'",
+        "lint": "npm run eslint; npm run stylelint",
         "prepush": "npm test",
         "prerelease": "npm run babel; npm test",
         "posttest": "npm run lint",
         "release": "standard-version --no-verify",
+        "report": "nyc report --reporter=html",
         "server": "babel-node ./scripts/server",
-        "dev": "babel-node ./scripts/dev",
         "start": "npm run build && npm run server",
+        "stylelint": "stylelint {demo,src}/**/*.{css,less,scss}",
         "test": "nyc ava --tap | tap-nyan",
         "watch": "babel-node ./scripts/watch"
     },
