--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "postcss-cssnext": "^2.11.0",
     "pug": "^2.0.0-rc.1",
     "rimraf": "^2.6.1",
+    "sharp": "^0.18.1",
     "standard-version": "^4.0.0",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
@@ -136,16 +137,29 @@
   },
   "xo": {
     "space": true,
-    "semicolon": false
+    "semicolon": false,
+    "rules": {
+      "no-console": "error"
+    }
   },
   "stylelint": {
-    "extends": "stylelint-config-standard",
+    "extends": [
+      "stylelint-config-standard"
+    ],
     "plugins": [
       "stylelint-no-unsupported-browser-features"
     ],
     "rules": {
       "indentation": 2,
       "number-leading-zero": null,
+      "property-no-unknown": [
+        true,
+        {
+          "ignoreProperties": [
+            "composes"
+          ]
+        }
+      ],
       "plugin/no-unsupported-browser-features": [
         true
       ],
