--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lint": "npm run eslint; npm run stylelint",
     "prepush": "npm test",
     "prerelease": "npm run babel; npm test",
+    "pretest": "bundlesize",
     "posttest": "npm run lint",
     "release": "standard-version --no-verify",
     "report": "nyc report --reporter=html",
@@ -60,6 +61,7 @@
     }
   },
   "dependencies": {
+    "babel-runtime": "^6.23.0",
     "easing-utils": "^0.0.7"
   },
   "devDependencies": {
@@ -67,6 +69,7 @@
     "ava": "^0.20.0",
     "babel-cli": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.24.1",
@@ -74,12 +77,14 @@
     "browserify": "^14.4.0",
     "browserify-hmr": "^0.3.5",
     "bundle-collapser": "^1.2.1",
+    "bundlesize": "^0.6.1",
     "caniuse-db": "^1.0.30000696",
     "copy": "^0.3.0",
     "coveralls": "^2.11.16",
     "cross-env": "^5.0.1",
     "css-modulesify": "^0.28.0",
     "cz-conventional-changelog": "^2.0.0",
+    "dependify": "^0.0.1",
     "errorify": "^0.3.1",
     "esdoc": "^0.5.2",
     "eslint-plugin-spellcheck": "^0.0.8",
@@ -103,7 +108,7 @@
     "stylelint": "^7.12.0",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-no-unsupported-browser-features": "^1.0.0",
-    "uglifyify": "3",
+    "uglifyify": "3.0.4",
     "watchify": "^3.9.0",
     "winston": "^2.3.1",
     "xo": "^0.18.2"
@@ -129,8 +134,8 @@
       [
         "env",
         {
+          "debug": false,
           "loose": true,
-          "debug": true,
           "useBuiltIns": true,
           "targets": {
             "browsers": [
@@ -152,6 +157,12 @@
       }
     }
   },
+  "bundlesize": [
+    {
+      "path": "./dist/paraglider.min.js",
+      "threshold": "4 Kb"
+    }
+  ],
   "xo": {
     "space": true,
     "semicolon": false,
